# Hackathon-ABI-Frameworks

./: .env.example  .gitignore  API.md  BLOCKERS.md  README.md  TRACKER.md  pyproject.toml
.agency/: AGENCY.md  COMMS.md  README.md  agent-teams-mode.md  mission.md  org-chart.md  roster-ledger.md
.agency/artifacts/: MASTER-BLUEPRINT.md  README.md  SPEC.md
.agency/bus/: events.md  tickets.md
.agency/bus/channels/: general.md  (+3 more)
.agency/cache/: registry.json
.agency/examples/: example-explainer.html
.agency/memory/: blog-voice.md  brief-contract.md  conventions.md  design-system.md  explainer-toolkit.md  extension-injection.md  index.md  micro-animation-toolkit.md  ontology.md  research-sources.md  scout-cadences.md  standards.md
.agency/scripts/: check-personas.sh
.agency/state/: decisions-log.md  design-needs.md  design-personas.md  gtm-evidence.md  reporting.md  risk-register.md  status-board.md  task-graph.md
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: export.json
frontend/scripts/: gen-fixture.mjs
frontend/src/: App.tsx  index.css  types.ts
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_wound_field_evidence.down.sql  002_wound_field_evidence.up.sql  003_fetch_health.down.sql  003_fetch_health.up.sql  004_extract_state.down.sql  004_extract_state.up.sql  005_llm_cache.down.sql  005_llm_cache.up.sql
src/woundpipe/: cli.py  config.py  errors.py  logging.py  models.py  repository.py
tests/: test_extraction.py  test_routing.py
(+60 files in other folders)
