[project]
name = "woundpipe"
version = "0.1.0"
description = "Wound-care Medicare Part B billing-triage pipeline (ABI Frameworks MVP)"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.2",
    "tenacity==8.5.0",
    "pydantic-settings==2.4.0",
    "structlog==24.4.0",
    "typer>=0.15",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
woundpipe = "woundpipe.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
